1999-09-01 John R. Jackson  <jrj@purdue.edu>

	* server-src/reporter.c: handle/report a common columnspec syntax
	  error instead of dumping core.

1999-09-01 John R. Jackson  <jrj@purdue.edu>

	* man/amanda.8.in: typo in columnspec description.

1999-09-01 John R. Jackson  <jrj@purdue.edu>

	* common-src/dgram.h: expressions in #define should be protected by
	  parenthesis.

1999-08-25  Alexandre Oliva  <oliva@dcc.unicamp.br>

	* changer-src/chg-chs.sh.in (changerdev): Pass it as -f flag to CHS.
	* docs/TAPE.CHANGERS: Document it.
	Reported by Mike Horansky <moho@stanford.EDU>

	* server-src/conffile.c (read_dumptype): Renamed from get_dumptype.
	Extended to support reading a named dumptype from a specified FILE.
	(get_dumptype): Use read_dumptype.
	(main): Read disklist, so that custom dumptypes are shown.
	* server-src/conffile.h (read_dumptype): Declare.
	* server-src/diskfile.c (read_diskline): Use read_dumptype if
	dumptype starts with `{'.
	* man/amanda.8.in (disklist): Document it.
	* NEWS: Likewise.
	* example/disklist: Exemplify it.

1999-08-23 John R. Jackson  <jrj@purdue.edu>

	* server-src/reporter.c (copy_template_file): make sure all data is
	  written to label template pipeline.

1999-08-21  Jean-Louis Martineau <martineau@IRO.UMontreal.CA>
	Patch by Peter Conrad <conrad@opus5.de>

	* docs/INTERNALS: documented splitting of dumps across multiple
	  holding disks.
	* server-src/conffile.c: make sure that disksize and chunksize
	  are multiple of TAPE_BLOCK_SIZE.
	* server-src/diskfile.c (find_disk): new function to see if a
	  given disk is contained in a list structure.
	* server-src/diskfile.h (find_disk): prototype.
	* server-src/driverio.h (RQ_MORE_DISK): Added message.
	* server-src/driverio.h (free_assignedhd): prototype.
	* server-src/driverio.h (assignedhd_t): new data structure.
	* server-src/driverio.c (cmdstr): added comamnd RQ-MORE-DISK.
	* server-src/driverio.c (dumper_cmd): Modified format of CONTINUE