@@ -1,5 +1,9 @@
 1999-09-01 John R. Jackson  <jrj@purdue.edu>
 
+	* server-src/amtoc.pl.in: allow multiple -s entries.
+
+1999-09-01 John R. Jackson  <jrj@purdue.edu>
+
 	* server-src/reporter.c: handle/report a common columnspec syntax
 	  error instead of dumping core.
 
@@ -176,7 +180,7 @@
 	* changer-src/scsi-aix.c: (SCSI_ExecuteCommand) Add missing
 	parameter to DecodeExtSense.
 
-	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.246 1999/09/01 21:19:00 jrj Exp $";
+	* changer-src/scsi-hpux.c: Added static char rcsid[] = "$Id: ChangeLog,v 1.205.2.247 1999/09/01 23:50:46 jrj Exp $";
 	* changer-src-/chg-scsi.c: dito
 	* changer-src/scsi-changer-driver.c: dito
 
